<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.homework3.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_candy"
        android:tint="#13000000" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@null"
        android:src="@drawable/cake_logo" />

    <LinearLayout
        android:id="@+id/log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_below="@+id/logo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/logo_img_manager"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="7dp"
                android:contentDescription="@null"
                android:src="@drawable/img_manager" />

            <EditText
                android:id="@+id/txt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:hint="@string/usr_name"
                android:inputType="textPersonName"
                android:textColor="#000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/logo_img_lock"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="7dp"
                android:contentDescription="@null"
                android:src="@drawable/img_padlock" />

            <EditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="#000" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/btn_log_in"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:layout_weight="0.5"
                android:background="@drawable/log_in_selector"
                android:gravity="center"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:layout_weight="0.5"
                android:background="@drawable/sign_up_selector"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/txt_create"
            android:textColor="#BFFFFFFF" />
    </LinearLayout>

</RelativeLayout>
