<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/more_option_container_relative_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_candy"
        android:tint="#66000000" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:id="@+id/first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_post"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="16dp"
                android:background="@drawable/cake_logo"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                app:civ_border_width="2dp"
                app:civ_border_color="#000"/>

            <TextView
                android:id="@+id/name_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/img_post"
                tools:hint="Gof'ii ADay-z" />

            <TextView
                android:id="@+id/status_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_post"
                android:layout_centerInParent="true"
                android:layout_toRightOf="@+id/img_post"
                tools:hint="6 นาที • " />

            <ImageView
                android:id="@+id/logo_img_manager"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginTop="23dp"
                android:layout_toRightOf="@id/status_post"
                android:contentDescription="@null"
                android:src="@drawable/img_manager" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/first"
            android:layout_gravity="center_horizontal"
            android:padding="16dp">

            <ImageView
                android:id="@+id/pic_post"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="120dp"
                android:background="@drawable/bg_candy"
                android:contentDescription="@null"
                android:scaleType="centerCrop" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/second2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:weightSum="120">

            <Button
                android:id="@+id/btn_like"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="40"
                android:background="@drawable/like_selector"
                android:drawableLeft="@drawable/img_like"
                android:text="@string/like"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_comment"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="40"
                android:background="@drawable/comment_selector"
                android:drawableLeft="@drawable/img_comment"
                android:text="@string/comment"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_share"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="40"
                android:background="@drawable/share_selector"
                android:drawableLeft="@drawable/img_share"
                android:text="@string/share"
                android:textAllCaps="false" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>






























